# Python-Wrapper-for-Llsm2-Vocoder

./: .gitignore  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
src/pyllsm2/: __init__.py  _build.py  _wrapper.py  _wrapper.pyi  python_compat.c  raw.py  raw.pyi
tests/: __init__.py  _audio_utils.py  _libllsm2_port_utils.py  _sample_data.py  test_dsputils_from_libllsm2.py  test_exports.py  test_layer0_pipeline_from_libllsm2.py  test_structs_from_libllsm2.py
tests/copy/: copy_sync.py
tests/integration/: __init__.py
tests/integration/libllsm2_ports/: _shared.py  test_coder_port.py  test_demo_stretch_port.py  test_dsputils_port.py  test_harmonic_port.py  test_layer0_anasynth_port.py  test_layer0_edgecase_port.py  test_layer1_anasynth_port.py  test_llsmrt_port.py  test_pbpeffects_port.py  test_structs_port.py
tests/learning/: __init__.py  _tone_cases.py  test_tone_generation.py
tests/raw/: __init__.py  test_raw_chunk_interop.py  test_raw_exports.py  test_raw_helpers.py
tests/unit/: __init__.py  test_exports.py  test_layers.py  test_mutation_views.py  test_numpy_ops.py  test_options.py
