[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "pyllsm2"
version = "0.2.0"
description = "Python bindings for libllsm2 (import name: pyllsm2)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "pyllsm2 wrapper contributors" }]
dependencies = ["numpy>=1.24", "cffi>=1.15"]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "soundfile>=0.12",
  "praat-parselmouth>=0.4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
pyllsm2 = ["*.pyi", "py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
